[gd_scene load_steps=30 format=3 uid="uid://dm70cr5gasunw"]

[ext_resource type="Texture2D" uid="uid://quordaff62ym" path="res://assets/game/almanacBackground.jpg" id="1_5uto3"]
[ext_resource type="Script" path="res://Script/almanac.gd" id="1_cx1tn"]
[ext_resource type="Texture2D" uid="uid://ccp7vyaw6h2h8" path="res://assets/Almanac/enemy/1.png" id="3_kk4aq"]
[ext_resource type="Texture2D" uid="uid://dau3f0ffgr5wi" path="res://assets/Almanac/enemy/2.png" id="4_oxo83"]
[ext_resource type="Texture2D" uid="uid://dcr7w3cu4cl87" path="res://assets/Almanac/enemy/3.png" id="5_tg57v"]
[ext_resource type="Texture2D" uid="uid://c3tfogyk6kqfg" path="res://assets/Almanac/enemy/4.png" id="6_54ai2"]
[ext_resource type="Texture2D" uid="uid://tkf0d687xjfi" path="res://assets/Almanac/enemy/5.png" id="7_07nxm"]
[ext_resource type="Texture2D" uid="uid://cfqwsm52pg1bf" path="res://assets/Almanac/enemy/6.png" id="8_vclnl"]
[ext_resource type="Texture2D" uid="uid://cxjm330yfdkc" path="res://assets/Almanac/enemy/7.png" id="9_01ihp"]
[ext_resource type="Texture2D" uid="uid://dj0pulc6j7b0x" path="res://assets/Almanac/enemy/8.png" id="10_7onho"]
[ext_resource type="Texture2D" uid="uid://cx820gfndptxt" path="res://assets/Almanac/enemy/9.png" id="11_tfta8"]
[ext_resource type="Texture2D" uid="uid://b0p0pqqi1njsp" path="res://assets/Almanac/enemy/10.png" id="12_odhap"]
[ext_resource type="Texture2D" uid="uid://ba2fiosawpeas" path="res://assets/Almanac/ally/1.png" id="13_sd4hl"]
[ext_resource type="Texture2D" uid="uid://ndn47efmjqri" path="res://assets/Almanac/ally/2.png" id="14_afvye"]
[ext_resource type="Texture2D" uid="uid://t026g1q0heln" path="res://assets/Almanac/ally/3.png" id="15_ko0s3"]
[ext_resource type="Texture2D" uid="uid://befvs0d0kya7j" path="res://assets/Almanac/ally/4.png" id="16_kpgm6"]
[ext_resource type="Texture2D" uid="uid://c5x3ixvg1y4xd" path="res://assets/Almanac/ally/5.png" id="17_bxux7"]
[ext_resource type="Texture2D" uid="uid://dro1xf1otb37n" path="res://assets/Almanac/ally/6.png" id="18_htruu"]
[ext_resource type="Texture2D" uid="uid://bhsmcwy5uk6hk" path="res://assets/Almanac/ally/7.png" id="19_ix0dr"]
[ext_resource type="Texture2D" uid="uid://dfwvp6b6ubbeq" path="res://assets/Almanac/ally/8.png" id="20_0gwyk"]
[ext_resource type="Texture2D" uid="uid://ofogt3rpmkeo" path="res://assets/Almanac/ally/9.png" id="21_go1ig"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_drncb"]
texture = ExtResource("1_5uto3")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_berbk"]
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6dpsf"]
bg_color = Color(1, 1, 1, 1)
border_color = Color(0.396078, 0.333333, 0.560784, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.396078, 0.333333, 0.560784, 1)
shadow_size = 3
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b8qe4"]
bg_color = Color(0.396078, 0.333333, 0.560784, 1)
border_color = Color(1, 1, 1, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 3
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_45ab5"]
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id="Theme_niof8"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_hover_color = Color(0.396078, 0.333333, 0.560784, 1)
Button/styles/hover = SubResource("StyleBoxFlat_6dpsf")
Button/styles/normal = SubResource("StyleBoxFlat_b8qe4")
Button/styles/pressed = SubResource("StyleBoxFlat_45ab5")

[sub_resource type="Theme" id="Theme_3vifk"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_hover_color = Color(0.396078, 0.333333, 0.560784, 1)
Button/styles/hover = SubResource("StyleBoxFlat_6dpsf")
Button/styles/normal = SubResource("StyleBoxFlat_b8qe4")
Button/styles/pressed = SubResource("StyleBoxFlat_45ab5")

[sub_resource type="Theme" id="Theme_1kt3g"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_hover_color = Color(0.396078, 0.333333, 0.560784, 1)
Button/styles/hover = SubResource("StyleBoxFlat_6dpsf")
Button/styles/normal = SubResource("StyleBoxFlat_b8qe4")
Button/styles/pressed = SubResource("StyleBoxFlat_45ab5")

[node name="Control" type="Control"]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cx1tn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_drncb")

[node name="EnemyContainer" type="ScrollContainer" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.078
anchor_top = 0.114
anchor_right = 0.938
anchor_bottom = 0.875
offset_left = 0.159996
offset_top = 0.147995
offset_right = 0.359985
offset_bottom = -0.250061
theme_override_styles/panel = SubResource("StyleBoxFlat_berbk")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/EnemyContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/EnemyContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_kk4aq")

[node name="TextureRect2" type="TextureRect" parent="Panel/EnemyContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_oxo83")

[node name="TextureRect3" type="TextureRect" parent="Panel/EnemyContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("5_tg57v")

[node name="TextureRect4" type="TextureRect" parent="Panel/EnemyContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("6_54ai2")

[node name="TextureRect5" type="TextureRect" parent="Panel/EnemyContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("7_07nxm")

[node name="TextureRect6" type="TextureRect" parent="Panel/EnemyContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("8_vclnl")

[node name="TextureRect7" type="TextureRect" parent="Panel/EnemyContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("9_01ihp")

[node name="TextureRect8" type="TextureRect" parent="Panel/EnemyContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("10_7onho")

[node name="TextureRect9" type="TextureRect" parent="Panel/EnemyContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("11_tfta8")

[node name="TextureRect10" type="TextureRect" parent="Panel/EnemyContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("12_odhap")

[node name="allyButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.404
anchor_top = 0.046
anchor_right = 0.5
anchor_bottom = 0.111
offset_left = 386.88
offset_top = -11.028
offset_right = 388.0
offset_bottom = -10.698
theme = SubResource("Theme_niof8")
text = "ALLY"

[node name="enemyButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.502
anchor_top = 0.046
anchor_right = 0.599
anchor_bottom = 0.111
offset_left = 397.44
offset_top = -11.028
offset_right = 397.28
offset_bottom = -10.698
theme = SubResource("Theme_3vifk")
text = "ENEMY"

[node name="AllyContainer" type="ScrollContainer" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.078
anchor_top = 0.114
anchor_right = 0.938
anchor_bottom = 0.875
offset_left = 0.159996
offset_top = 0.147995
offset_right = 0.359985
offset_bottom = -0.250061

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/AllyContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/AllyContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("13_sd4hl")

[node name="TextureRect2" type="TextureRect" parent="Panel/AllyContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("14_afvye")

[node name="TextureRect3" type="TextureRect" parent="Panel/AllyContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("15_ko0s3")

[node name="TextureRect4" type="TextureRect" parent="Panel/AllyContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("16_kpgm6")

[node name="TextureRect5" type="TextureRect" parent="Panel/AllyContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("17_bxux7")

[node name="TextureRect6" type="TextureRect" parent="Panel/AllyContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("18_htruu")

[node name="TextureRect7" type="TextureRect" parent="Panel/AllyContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("19_ix0dr")

[node name="TextureRect8" type="TextureRect" parent="Panel/AllyContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("20_0gwyk")

[node name="TextureRect9" type="TextureRect" parent="Panel/AllyContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("21_go1ig")

[node name="BackButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.079
anchor_top = 0.046
anchor_right = 0.176
anchor_bottom = 0.111
offset_left = -0.120003
offset_top = -10.028
offset_right = -0.280014
offset_bottom = -9.69801
theme = SubResource("Theme_1kt3g")
text = "BACK"
